# losneomrade

./: .gitignore  pyproject.toml  readme.md
notebooks/: test.ipynb
src/losneomrade/: retrogression.py  terrain_criteria.py  utils.py
tests/: test_losneomrade.py  test_utils.py
tests/testdata/: template_1_5.geojson  template_retro_1_5.geojson
